Exercicio 2 lab 2